--- a/packages/hof_express_app/Resources/Private/Language/locallang_csh_tx_hofexpressapp_domain_model_customer.xlf
+++ b/packages/hof_express_app/Resources/Private/Language/locallang_csh_tx_hofexpressapp_domain_model_customer.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="EXT:hof_express_app/Resources/Private/Language/locallang_csh" date="2020-01-07T20:02:33Z" product-name="hof_express_app">
+	<file source-language="en" datatype="plaintext" original="EXT:hof_express_app/Resources/Private/Language/locallang_csh" date="2020-01-19T10:49:02Z" product-name="hof_express_app">
 		<header/>
 		<body>
 			<trans-unit id="user_id.description" resname="user_id.description">
@@ -11,6 +11,9 @@
 			</trans-unit>
 			<trans-unit id="address.description" resname="address.description">
 				<source>address</source>
+			</trans-unit>
+			<trans-unit id="user.description" resname="user.description">
+				<source>user</source>
 			</trans-unit>
 		</body>
 	</file>
